tests/valid_tests/1.crbc
routine main () : integer is
    print('Hello world\n');
    return 0;
end
//test