tests/invalid_tests/syntaxErrors/1.crbc
type int is integer;
routine main () : integer is
    print("Hello world\n");
    return 0;
